Versión final con mejoras
en esta versión, añadí un mensaje cuando entras a la pagina web con JavaScript, he quitado los estilos embebidos de la pagina de Libros, he añadido un formulario y e quitado varios errores en el código de Html

--- a/Ejercicio para el dia del libro(Raúl González Perera )/Inicio.html
+++ b/Ejercicio para el dia del libro(Raúl González Perera )/Inicio.html
@@ -5,9 +5,9 @@
 
 <Head>
       <title>Inicio</title>
-  	<meta charset="UTF-8"/>
-  	<link rel="icon" type="image/png" href="Imagenes/Favicoin.png" />
-      <link rel="stylesheet" type="text/css" href="primercss.css"  />
+  	<meta charset="UTF-8">
+  	<link rel="icon" type="image/png" href="Imagenes/Favicoin.png" >
+      <link rel="stylesheet" type="text/css" href="primercss.css"  >
 
 
 </Head>
@@ -22,16 +22,16 @@
   <nav> 
     <center> <p><a href="Inicio.html">Inicio</a>&nbsp;   
         | &nbsp; <a href="Libros.html">Libros recomendados </a>&nbsp;  
-    </center>  </p> 
+    </center>  
  </nav>
 </div>
  <section >
         <div class="slider-frame">
           <ul>
-            <li> <img src="Imagenes/titulo 1.jpg"  ></li>
-            <li><img src="Imagenes/titulo 4.jpg"  ></li>
-            <li><img src="Imagenes/titulo2.jpg"  ></li>
-            <li> <img src="Imagenes/titulo 3.jpg" ></li>
+            <li> <img src="Imagenes/titulo_1.jpg" alt="Imagen del carrusel" ></li>
+            <li><img src="Imagenes/titulo_4.jpg"  alt="Imagen del carrusel"></li>
+            <li><img src="Imagenes/titulo2.jpg"  alt="Imagen del carrusel"></li>
+            <li> <img src="Imagenes/titulo_3.jpg" alt="Imagen del carrusel" ></li>
           </ul>
         </div>
         
@@ -61,17 +61,14 @@ del derecho de autor. La Conferencia General de la UNESCO la aprobó en París e
     <a href="http://jigsaw.w3.org/css-validator/check/referer">
         <img style="border:0;width:88px;height:31px"
             src="http://jigsaw.w3.org/css-validator/images/vcss"
-            alt="¡CSS Válido!" />
+            alt="¡CSS Válido!" >
     </a>
 </p> </center> 
-
-
-
-    
-
-
-
-
+<script>
+  window.onload = function() {
+    alert("¡Bienvenido a mi página web!");
+  }
+</script>
 
 
 
