--- a/Ejercicio para el dia del libro(Raúl González Perera )/Libros.html
+++ b/Ejercicio para el dia del libro(Raúl González Perera )/Libros.html
@@ -1,77 +1,56 @@
 <!DOCTYPE html>
-
 <html lang="es">
-
-
-<Head>
+<head>
   <title>Libros</title>
-  <meta charset="UTF-8"/>
-  <link rel="icon" type="image/png" href="Imagenes/Favicoin.png" />
-  <link rel="stylesheet" type="text/css" href="tercsss.css"  />
-</Head>
-
-<Body>
-  <div class="centrar"><article><p><h1>Libros recomendados</h1></article>
-
+  <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="Imagenes/Favicoin.png">
+  <link rel="stylesheet" type="text/css" href="tercsss.css">
+</head>
+<body>
+  <div class="centrar">
+    <article>
+      <h1>Libros recomendados</h1>
+    </article>
     <div class="elemento2">
       <div class="centrar">
-        <nav> 
-             <p><a href="Inicio.html">Inicio</a>&nbsp; 
-              | &nbsp; <a href="Libros.html">Libros recomendados </a>&nbsp;  
-             </p> 
-       </nav>
+        <nav>
+          <p>
+            <a href="Inicio.html">Inicio</a>&nbsp; | &nbsp;
+            <a href="Libros.html">Libros recomendados</a>&nbsp;
+          </p>
+        </nav>
       </div>
-      </div>
-   
-
- <section>
-
-  
- 	<ul style="list-style: none";>
-          <article><li><a href="libro 1.html">La rueda del tiempo El ascenso de las sombras</a></li></article>
-  	      <article><li><a href="libro 2.html">La rueda del tiempo Esquirla del amanecer</a></li></article>
-          <article><li><a href="libro 3.html">Como hacer un coche por Adrian Newey</a></li></article>
-          <article><li><a href="libro 4.html">Asi es la puta vida</a></li></article>
-          <article><li><a href="libro 5.html">Lewis Hamilton: My Story</a></li></article>
- 	</ul>
-  	</p>
-  
- </section>
-
-</div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-<div class="elemento">
-
-
-<div class="contenedor3"><article><p><a href="https://www.amazon.es/b?node=599364031&ie=UTF8&tag=hydes-21&hvadid=217178552850&hvpos=&hvexid=&hvnetw=g&hvrand=10788904941433443120&hvpone=&hvptwo=&hvqmt=e&hvdev=c&ref=pd_sl_3ia838khfb_e"><img src="Imagenes/Aston.PNG "width="100" ></a></p></article></div>
- 
-<div class="contenedor">
-  <img src="Imagenes/foto 1.png" alt="Mi imagen">
-</div>
-
-<div class="contenedor2">
-  <img src="Imagenes/foto 2.png" alt="Mi imagen">
-</div>
-</Body>
-
-
-
-
-</Html>
-
+    </div>
+    <section>
+      <ul style="list-style: none">
+        <li><a href="libro_1.html">La rueda del tiempo El ascenso de las sombras</a></li>
+        <li><a href="libro_2.html">La rueda del tiempo Esquirla del amanecer</a></li>
+        <li><a href="libro_3.html">Como hacer un coche por Adrian Newey</a></li>
+        <li><a href="libro_4.html">Asi es la puta vida</a></li>
+        <li><a href="libro_5.html">Lewis Hamilton: My Story</a></li>
+        <li><a href="formulario.html">Da tu opinion aqui</a></li>
+      </ul>
+    </section>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div class="elemento"></div>
+  <div class="contenedor3">
+    <p><a href="https://www.amazon.es/b?node=599364031&ie=UTF8&tag=hydes-21&hvadid=217178552850&hvpos=&hvexid=&hvnetw=g&hvrand=10788904941433443120&hvpone=&hvptwo=&hvqmt=e&hvdev=c&ref=pd_sl_3ia838khfb_e">
+      <img src="Imagenes/Aston.PNG" width="100">
+    </a></p>
+  </div>
+  <div class="contenedor">
+    <img src="Imagenes/foto_1.png" alt="Mi imagen">
+  </div>
+  <div class="contenedor2">
+    <img src="Imagenes/foto_1.png" alt="Mi imagen">
+  </div>
+</body>
+</html>
